crates/tui/snapshots/fullscreen/frame/chat_progress_with_notice.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: working
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
⠋ Working... · 0s · esc to interrupt                                            
                                                               Copied 42 chars  
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  ⏸ Manual · ← Dashboard · ? for shortcuts
