crates/tui/snapshots/fullscreen/frame/clipboard_image_pasted_into_chat_input.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: rendered_after_paste
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  > [Image #1]                                                                  
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  ⏸ Manual
