crates/tui/snapshots/fullscreen/frame/config_issues_tab_shows_one_auto_refresh_value.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 20)"
---
  .                                                                                    [Dashboard]  
                                                                                                    
            ┌── Config ───────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   General    Providers    Issues    Network                             │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search configuration                                               │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> Auto refresh                                                   Never   │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ──────────│                                                                         │───────────  
  > Build an└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Enter/Space change · Tab tabs · / search · Esc close
