crates/tui/snapshots/fullscreen/frame/dictation_model_downloading_zh.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                                   [仪 表 盘 ]  
                                                                                
> /voice                                                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  听 写  · 正 在 下 载  encoder.onnx： 2.0 MiB · ctrl+c 停 止 听 写                        
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                
  ⏸ 手 动  · ← 仪 表 盘  · ? 查 看 快 捷 键
